--- a/baas-sample-api/baas-sample-api/appsettings.json
+++ b/baas-sample-api/baas-sample-api/appsettings.json
@@ -9,5 +9,15 @@
   "my_cluster": {
     "CASSANDRA_HOSTS": "cassandra",
     "CASSANDRA_PORT": 9042
+  },
+  "baas-log-producer": {
+    "kafka-brokers": "kafka:9092",
+    "topic": "baas_logs"
+  },
+  "baas-log-consumer": {
+    "kafka-brokers": "kafka:9092",
+    "topics": [ "baas_logs" ],
+    "group-id": "baas-log-consumer-group",
+    "auto-offset-reset": 1
   }
 }
