--- a/baas-sample-api/baas-sample-api/baas-sample-api.csproj
+++ b/baas-sample-api/baas-sample-api/baas-sample-api.csproj
@@ -30,5 +30,8 @@
     <ProjectReference Include="..\client.cassandra\client.cassandra.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\client.kafka\client.kafka.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
